compilers/ID/cool/regression/BASE_semanttest/neg_incorrect.cl.stderr
./BASE_semanttest/neg_incorrect.cl:2: Argument of '~' has type Bool instead of Int.
Compilation halted due to static semantic errors.
