compilers/ID/cool/regression/BASE_semanttest/neg_incorrect.cl
class Main is
   main(): Int is ~true end;
end;
